Gutenberg iframe: fix extra scrollbars (#30530)

--- a/client/gutenberg/editor/style.scss
+++ b/client/gutenberg/editor/style.scss
@@ -411,10 +411,15 @@ $gutenberg-theme-toggle: #11a0d2;
 }
 
 // Calypsoify iframe
+
+html.is-iframe {
+	overflow: hidden;
+}
+
 .main.calypsoify.is-iframe {
 	background-color: $gray-light;
 	margin: 0;
-	overflow-y: scroll;
+	overflow-y: hidden;
 	padding: 0;
 	z-index: z-index( 'root', '.main.calypsoify.is-iframe' );
 	-webkit-overflow-scrolling: touch;
